--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="public/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="public/styles/dashboard.css">
     <script src="public/scripts/main.js" defer></script>
+    <title>DASHBOARD</title>
 </head>
 <body>
-    <h1 id="title">DASHBOARD</h1>
+ 
+    <nav>
+        <p>LOGO</p>
+        <ul>
+            <li>HOME</li>
+            <li>USER</li>
+            <li>SETTINGS</li>
+        </ul>
+    </nav>
+ 
+    <div class="container">
+        <aside>LINKI</aside>
+        <main>
+            <h1>DASHBOARD</h1>
+            
+            <ul>
+                <?php foreach($cards as $key=>$value): ?>
+                    <li>
+                        <?php echo $value['title']; ?>
+                        <img src="<?= $value['imageUrlPath']; ?>">
+                    </li>
+                <?php endforeach; ?>
+            </ul>
+        </main>
+    </div>
 </body>
 </html>
