--- a/public/views/register.html
+++ b/public/views/register.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" type="text/css" href="public/styles/main.css">
     <link rel="stylesheet" type="text/css" href="public/styles/login.css">
 </head>
 <body>
-    <form action="/login" method="POST">
-        <h1 id="title">LOGIN</h1>
+    <form action="/register" method="POST">
+        <h1 id="title">REGISTER</h1>
         
         <?php if(isset($messages)): ?>
             <p style="color: red; text-align: center;"><?= htmlspecialchars($messages) ?></p>
         <?php endif; ?>
         
+        <input type="text" name="firstname" placeholder="First name" required>
         <input type="email" name="email" placeholder="Email" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">LOGIN</button>
+        <input type="password" name="password1" placeholder="Password" required>
+        <input type="password" name="password2" placeholder="Confirm password" required>
+        <button type="submit">REGISTER</button>
         
-        <p>Don't have an account? <a href="/register">Register here</a></p>
+        <p>Already have an account? <a href="/login">Login here</a></p>
     </form>
 </body>
 </html>
